--- a/index.html
+++ b/index.html
@@ -132,6 +132,12 @@
             <!-- F1 Tab -->
             <section id="f1" class="tab-content hidden">
                 <img src="images/F1.png" alt="Formula 1 Logo" class="mx-auto mb-4 h-12 sm:h-14">
+                <!-- F1 Standings Ticker -->
+                <div id="card-f1-standings" class="bg-[url('images/Racing5.jpg')] bg-cover bg-center p-2 rounded-lg shadow-md text-white mb-4">
+                    <div class="marquee-container bg-gray-800 bg-opacity-70">
+                        <span id="f1-standings-ticker" class="marquee text-sm sm:text-base"></span>
+                    </div>
+                </div>
                 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 sm:gap-6">
                     <!-- Tile: Formula 1 -->
                     <div id="card-f1" class="weather-card bg-[url('images/Racing6.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
