--- a/index.html
+++ b/index.html
@@ -7,60 +7,95 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script defer src="script.js"></script>
     <style>
-    /* Custom CSS for marquee effect */
-    @keyframes marquee {
-        0% { transform: translateX(100vw); }
-        100% { transform: translateX(-100%); }
-    }
-    .marquee {
-        display: inline-block;
-        white-space: nowrap;
-        animation: marquee 20s linear infinite;
-        position: absolute;
-        will-change: transform;
-    }
-    .marquee-container {
-        overflow: hidden;
-        width: 100%;
-        position: relative;
-        height: 2rem;
-    }
-    /* Double line spacing for rugby schedule */
-    #intRugby-schedule li {
-        line-height: 2;
-    }
-    /* Style for inline weather icons */
-    .weather-icon-inline {
-        width: 24px;
-        height: 24px;
-        vertical-align: middle;
-        margin: 0 4px;
-    }
-    /* Style for driver and constructor images */
-    .driver-image {
-        width: auto;
-        height: auto;
-        object-fit: contain;
-        vertical-align: middle;
-        margin-left: 8px;
-        margin-right: 8px;
-    }
-    .constructor-image {
-        width: auto;
-        height: auto;
-        object-fit: contain;
-        vertical-align: left;
-        margin-left: 1px;
-    }
-    /* Style for ticker icons */
-    .ticker-icon {
-        width: 20px;
-        height: 20px;
-        display: inline;
-        vertical-align: middle;
-        margin: 0 4px;
-    }
-</style>
+        /* Custom CSS for marquee effect */
+        @keyframes marquee {
+            0% { transform: translateX(100vw); }
+            100% { transform: translateX(-100%); }
+        }
+        .marquee {
+            display: inline-block;
+            white-space: nowrap;
+            animation: marquee 20s linear infinite;
+            position: absolute;
+            will-change: transform;
+        }
+        .marquee-container {
+            overflow: hidden;
+            width: 100%;
+            position: relative;
+            height: 2rem;
+        }
+        /* Double line spacing for rugby schedule */
+        #intRugby-schedule li {
+            line-height: 2;
+        }
+        /* Style for inline weather icons */
+        .weather-icon-inline {
+            width: 24px;
+            height: 24px;
+            vertical-align: middle;
+            margin: 0 4px;
+        }
+        /* Style for driver and constructor images */
+        .driver-image {
+            width: auto;
+            height: auto;
+            object-fit: contain;
+            vertical-align: middle;
+            margin-left: 8px;
+            margin-right: 8px;
+        }
+        .constructor-image {
+            width: auto;
+            height: auto;
+            object-fit: contain;
+            vertical-align: left;
+            margin-left: 1px;
+        }
+        /* Style for ticker icons */
+        .ticker-icon {
+            width: 20px;
+            height: 20px;
+            display: inline;
+            vertical-align: middle;
+            margin: 0 4px;
+        }
+        /* Style for countdown clock */
+        .countdown-container {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            background-color: #1a1a1a;
+            padding: 8px;
+            border-radius: 8px;
+            margin-top: 8px;
+            width: 100%;
+            max-width: 300px;
+        }
+        .countdown-timer {
+            display: flex;
+            gap: 8px;
+            font-size: 1.5rem;
+            font-weight: bold;
+            color: white;
+        }
+        .countdown-label {
+            font-size: 0.75rem;
+            color: #ccc;
+            text-align: center;
+        }
+        .countdown-clock {
+            width: 50px;
+            height: 50px;
+        }
+        .countdown-title {
+            font-size: 0.9rem;
+            font-weight: bold;
+            color: #ccc;
+            text-align: center;
+            margin-bottom: 4px;
+        }
+    </style>
 </head>
 <body class="bg-gray-900 text-white">
     <div class="container mx-auto p-4 sm:p-6">
@@ -152,6 +187,27 @@
                         <div class="bg-gray-800 bg-opacity-70 p-2 rounded">
                             <h3 class="text-base sm:text-lg font-bold">Formula 1</h3>
                             <h4 id="f1-next-race" class="text-lg sm:text-xl font-bold" style="color: #FFFF00"></h4>
+                            <!-- Countdown Clock -->
+                            <div id="f1-countdown" class="countdown-container">
+                                <div>
+                                    <div class="countdown-title">SPRINT</div>
+                                    <div class="countdown-timer">
+                                        <div>
+                                            <span id="f1-countdown-hours">00</span>
+                                            <div class="countdown-label">HRS</div>
+                                        </div>
+                                        <div>
+                                            <span id="f1-countdown-minutes">00</span>
+                                            <div class="countdown-label">MINS</div>
+                                        </div>
+                                        <div>
+                                            <span id="f1-countdown-seconds">00</span>
+                                            <div class="countdown-label">SECS</div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <img src="images/ClockIcon.png" alt="Clock Icon" class="countdown-clock">
+                            </div>
                             <div class="mt-1">
                                 <img id="f1-flag" class="h-6 sm:h-8 inline-block mr-2" alt="Race Flag">
                                 <span id="f1-track-name" class="text-sm sm:text-base align-middle" style="color: #FFFF00"></span>
