--- a/index.html
+++ b/index.html
@@ -193,41 +193,50 @@
     <div class="mt-4 sm:mt-6">
         <!-- Next Race Subtab -->
         <div id="f1-next-race-tab" class="f1-subtab-content">
-            <div id="card-f1" class="weather-card bg-[url('images/Racing6.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
-                <div class="bg-gray-800 bg-opacity-70 p-2 rounded">
-                    <h3 class="text-base sm:text-lg font-bold">Formula 1</h3>
-                    <h4 id="f1-next-race" class="text-lg sm:text-xl font-bold" style="color: #FFFF00"></h4>
-                    <!-- Countdown Clock -->
-                    <div id="f1-countdown" class="countdown-container">
-                        <div>
-                            <div class="countdown-title">SPRINT</div>
-                            <div class="countdown-timer">
-                                <div>
-                                    <span id="f1-countdown-hours">00</span>
-                                    <div class="countdown-label">HRS</div>
-                                </div>
-                                <div>
-                                    <span id="f1-countdown-minutes">00</span>
-                                    <div class="countdown-label">MINS</div>
-                                </div>
-                                <div>
-                                    <span id="f1-countdown-seconds">00</span>
-                                    <div class="countdown-label">SECS</div>
+            <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 sm:gap-6">
+                <!-- Tile 1: Next Race Details -->
+                <div id="card-f1" class="weather-card bg-[url('images/Racing6.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
+                    <div class="bg-gray-800 bg-opacity-70 p-2 rounded">
+                        <h3 class="text-base sm:text-lg font-bold">Formula 1</h3>
+                        <h4 id="f1-next-race" class="text-lg sm:text-xl font-bold" style="color: #FFFF00"></h4>
+                        <!-- Countdown Clock -->
+                        <div id="f1-countdown" class="countdown-container">
+                            <div>
+                                <div class="countdown-title">SPRINT</div>
+                                <div class="countdown-timer">
+                                    <div>
+                                        <span id="f1-countdown-hours">00</span>
+                                        <div class="countdown-label">HRS</div>
+                                    </div>
+                                    <div>
+                                        <span id="f1-countdown-minutes">00</span>
+                                        <div class="countdown-label">MINS</div>
+                                    </div>
+                                    <div>
+                                        <span id="f1-countdown-seconds">00</span>
+                                        <div class="countdown-label">SECS</div>
+                                    </div>
                                 </div>
                             </div>
+                            <img src="images/ClockIcon.png" alt="Clock Icon" class="countdown-clock">
                         </div>
-                        <img src="images/ClockIcon.png" alt="Clock Icon" class="countdown-clock">
+                        <div class="mt-1">
+                            <img id="f1-flag" class="h-6 sm:h-8 inline-block mr-2" alt="Race Flag">
+                            <span id="f1-track-name" class="text-sm sm:text-base align-middle" style="color: #FFFF00"></span>
+                        </div>
+                        <div id="f1-session-times" class="text-xs sm:text-sm" style="color: #FFFFFF"></div>
+                        <img id="f1-track" class="w-full max-w-xs mt-2" alt="Track Layout">
+                        <p id="f1-temp" class="temp-label font-bold" style="color: #FFFF00">Temp: <span class="temp-value" style="color: white">Loading...</span></p>
+                        <p id="f1-condition" class="condition-label font-bold" style="color: #FFFF00">Condition: <span class="condition-value" style="color: white">Loading...</span></p>
                     </div>
-                    <div class="mt-1">
-                        <img id="f1-flag" class="h-6 sm:h-8 inline-block mr-2" alt="Race Flag">
-                        <span id="f1-track-name" class="text-sm sm:text-base align-middle" style="color: #FFFF00"></span>
+                </div>
+                <!-- Tile 2: 2025 Schedule -->
+                <div id="card-f1-schedule" class="weather-card bg-[url('images/Racing6.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
+                    <div class="bg-gray-800 bg-opacity-70 p-2 rounded">
+                        <h3 class="text-base sm:text-lg font-bold">2025 F1 Schedule</h3>
+                        <p class="text-xs sm:text-sm mt-2"><strong class="underline">Upcoming Races:</strong></p>
+                        <ul id="f1-schedule" class="text-xs sm:text-sm list-disc list-inside"></ul>
                     </div>
-                    <div id="f1-session-times" class="text-xs sm:text-sm" style="color: #FFFFFF"></div>
-                    <img id="f1-track" class="w-full max-w-xs mt-2" alt="Track Layout">
-                    <p id="f1-temp" class="temp-label font-bold" style="color: #FFFF00">Temp: <span class="temp-value" style="color: white">Loading...</span></p>
-                    <p id="f1-condition" class="condition-label font-bold" style="color: #FFFF00">Condition: <span class="condition-value" style="color: white">Loading...</span></p>
-                    <p class="text-xs sm:text-sm mt-2"><strong class="underline">2025 Schedule:</strong></p>
-                    <ul id="f1-schedule" class="text-xs sm:text-sm list-disc list-inside"></ul>
                 </div>
             </div>
         </div>
