--- a/index.html
+++ b/index.html
@@ -244,21 +244,21 @@
         <!-- Driver Standings Subtab -->
         <div id="f1-driver-standings-tab" class="f1-subtab-content hidden">
             <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 sm:gap-6">
-                <!-- Tile 1: Driver Standings List -->
-                <div id="card-driver-standings" class="weather-card bg-[url('images/Racing7.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
-                    <div class="bg-gray-500 bg-opacity-70 p-2 rounded">
-                        <h3 class="text-base sm:text-lg font-bold">Driver Standings</h3>
-                        <div id="f1-driver-standings" class="text-sm sm:text-base mt-2">
-                            <!-- Driver Standings list will be populated by script.js -->
-                        </div>
-                    </div>
-                </div>
-                <!-- Tile 2: Driver Standings Image -->
+                <!-- Tile 1: Driver Standings Image (Moved to First Position) -->
                 <div id="card-driver-standings-image" class="weather-card bg-[url('images/Racing7.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
                     <div class="bg-gray-500 bg-opacity-70 p-2 rounded">
                         <h3 class="text-base sm:text-lg font-bold">Driver Standings Visual</h3>
                         <div id="f1-driver-standings-image" class="mt-2">
                             <!-- Driver Standings image will be populated by script.js -->
+                        </div>
+                    </div>
+                </div>
+                <!-- Tile 2: Driver Standings List (Moved to Second Position) -->
+                <div id="card-driver-standings" class="weather-card bg-[url('images/Racing7.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
+                    <div class="bg-gray-500 bg-opacity-70 p-2 rounded">
+                        <h3 class="text-base sm:text-lg font-bold">Driver Standings</h3>
+                        <div id="f1-driver-standings" class="text-sm sm:text-base mt-2">
+                            <!-- Driver Standings list will be populated by script.js -->
                         </div>
                     </div>
                 </div>
