--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                         <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 sm:gap-6">
                             <div id="card-driver-standings-image" class="weather-card bg-[url('images/Racing7.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
                                 <div class="bg-black bg-opacity-90 p-2 rounded">
-                                    <h3 class="text-base sm:text-lg font-bold">Driver Standings after the Spanish Race</h3>
+                                    <h3 class="text-base sm:text-lg font-bold">Driver Standings after the Austrian Race</h3>
                                     <div id="f1-driver-standings-image" class="mt-2">
                                         <img src="images/DStandingsVisual.png" alt="Driver Standings Visual Additional" class="w-full max-w-md h-auto mb-4">
                                         <img src="images/DStandings.png" alt="Driver Standings Visual" class="w-full max-w-md h-auto">
@@ -268,7 +268,7 @@
                         <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 sm:gap-6 direction-ltr">
                             <div id="card-constructor-standings-image" class="weather-card bg-[url('images/Racing7.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75 order-1">
                                 <div class="bg-black bg-opacity-90 p-2 rounded">
-                                    <h3 class="text-base sm:text-lg font-bold">Constructor Standings after the Spanish Race</h3>
+                                    <h3 class="text-base sm:text-lg font-bold">Constructor Standings after the Austrian Race</h3>
                                     <div id="f1-constructor-standings-image" class="mt-2">
                                         <img src="images/CStandings.png" alt="Constructor Standings Visual" class="w-full max-w-md h-auto">
                                     </div>
@@ -303,6 +303,7 @@
                                         <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-spain')">Spanish GP</button>
                                         <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-canada')">Canadian GP</button>
                                         <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-austria')">Austrian GP</button>
+                                        <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-british')">British GP</button>
                                     </nav>
                                     <!-- Race Results Content -->
                                     <div id="f1-results-content" class="text-sm sm:text-base mt-2">
@@ -362,6 +363,10 @@
                                             <p><strong>Austrian Grand Prix</strong></p>
                                             <img src="images/AustriaResult.png" alt="Austrian Grand Prix Result" class="w-full max-w-md h-auto mb-4">
                                         </div>
+                                        <div id="race-british" class="race-content">
+                                            <p><strong>British Grand Prix</strong></p>
+                                            <img src="images/GBResult.png" alt="British Grand Prix Result" class="w-full max-w-md h-auto mb-4">
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -386,6 +391,7 @@
                                         <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showFactsTab('facts-spain')">Spanish GP</button>
                                         <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showFactsTab('facts-canada')">Canadian GP</button>
                                         <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showFactsTab('facts-austria')">Austrian GP</button>
+                                        <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showFactsTab('facts-british')">British GP</button>
                                     </nav>
                                     <!-- Race Facts content -->
                                     <div id="f1-facts-content" class="text-sm sm:text-base mt-2">
@@ -537,6 +543,10 @@
                                             Your browser does not support the video tag.
                                         </video>
                                             <p>FORMULA1. (2025, June 28). Austria from the air [Video]. X. https://x.com/i/status/1938686520975872152</p>
+                                        </div>
+                                        <div id="facts-british" class="facts-content hidden">
+                                            <p><strong>British Grand Prix</strong></p>
+                                            <img src="images/GB.png" alt="Austrian Grand Prix" class="w-full max-w-md h-auto mb-4">
                                         </div>
                                     </div>
                                 </div>
