--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                         <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 sm:gap-6">
                             <div id="card-driver-standings-image" class="weather-card bg-[url('images/Racing7.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75">
                                 <div class="bg-black bg-opacity-90 p-2 rounded">
-                                    <h3 class="text-base sm:text-lg font-bold">Driver Standings after the Las Vegas Race</h3>
+                                    <h3 class="text-base sm:text-lg font-bold">Driver Standings after the Qatar Race</h3>
                                     <div id="f1-driver-standings-image" class="mt-2">
                                         <img src="images/DStandingsVisual.png" alt="Driver Standings Visual Additional" class="w-full max-w-md h-auto mb-4">
                                         <img src="images/DStandings.png" alt="Driver Standings Visual" class="w-full max-w-md h-auto">
@@ -268,7 +268,7 @@
                         <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 sm:gap-6 direction-ltr">
                             <div id="card-constructor-standings-image" class="weather-card bg-[url('images/Racing7.jpg')] bg-cover bg-center p-4 rounded-lg shadow-md text-left text-white bg-opacity-75 order-1">
                                 <div class="bg-black bg-opacity-90 p-2 rounded">
-                                    <h3 class="text-base sm:text-lg font-bold">Constructor Standings after the Las Vegas Race</h3>
+                                    <h3 class="text-base sm:text-lg font-bold">Constructor Standings after the Qatar Race</h3>
                                     <div id="f1-constructor-standings-image" class="mt-2">
                                         <img src="images/CStandings.png" alt="Constructor Standings Visual" class="w-full max-w-md h-auto">
                                     </div>
@@ -319,6 +319,7 @@
                                         <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-vegas')">Las Vegas GP</button>
                                         <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-qatar-sprint')">Qatar Sprint</button>
                                         <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-qatar')">Qatar GP</button>
+                                        <button class="race-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showRaceTab('race-abudhabi')">Abu Dhabi GP</button>
                                     </nav>
                                     <!-- Race Results Content -->
                                     <div id="f1-results-content" class="text-sm sm:text-base mt-2">
@@ -442,6 +443,10 @@
                                             <p><strong>Qatar Grand Prix</strong></p>
                                             <img src="images/QatarResult.png" alt="Qatar Grand Prix Result" class="w-full max-w-md h-auto mb-4">
                                         </div>
+                                        <div id="race-abudhabi" class="race-content">
+                                            <p><strong>Abu Dhabi Grand Prix</strong></p>
+                                            <img src="images/AbuDhabiResult.png" alt="Abu Dhabi Grand Prix Result" class="w-full max-w-md h-auto mb-4">
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -478,6 +483,7 @@
                                         <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showFactsTab('facts-brazil')">Brazilian GP</button>
                                         <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showFactsTab('facts-vegas')">Las Vegas GP</button>
                                         <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showFactsTab('facts-qatar')">Qatar GP</button>
+                                        <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showFactsTab('facts-abudhabi')">Abu Dhabi GP</button>
                                     </nav>
                                     <!-- Race Facts content -->
                                     <div id="f1-facts-content" class="text-sm sm:text-base mt-2">
@@ -731,6 +737,10 @@
                                         <div id="facts-qatar" class="facts-content hidden">
                                             <p><strong>Qatar Grand Prix</strong></p>
                                             <img src="images/Qatar.png" alt="Qatar Grand Prix" class="w-full max-w-md h-auto mb-4">
+                                        </div>
+                                        <div id="facts-abudhabi" class="facts-content hidden">
+                                            <p><strong>Abu Dhabi Grand Prix</strong></p>
+                                            <img src="images/AbuDhabi.png" alt="Abu Dhabi Grand Prix" class="w-full max-w-md h-auto mb-4">
                                         </div>
                                     </div>
                                 </div>
